--- a/.github/workflows/package-release.yml
+++ b/.github/workflows/package-release.yml
@@ -38,26 +38,32 @@ jobs:
       - name: Create package
         id: create_package
         run: |
-          # Capture output in a variable
-          RESULT=$(.github/workflows/scripts/create-package.sh "${{ steps.version.outputs.version }}" "${{ steps.current_time.outputs.timestamp }}")
-          # Check if script succeeded
-          if [ $? -ne 0 ]; then
-            echo "Error creating package"
+          # Create the package and capture only the filename
+          FILENAME=$(.github/workflows/scripts/create-package.sh "${{ steps.version.outputs.version }}" "${{ steps.current_time.outputs.timestamp }}")
+          
+          # Debug output
+          echo "Package script returned: '$FILENAME'"
+          
+          # Validate that the file exists
+          if [ -f "$FILENAME" ]; then
+            echo "Found package file: $FILENAME"
+            echo "package_path=$FILENAME" >> $GITHUB_OUTPUT
+          else
+            echo "ERROR: Package file not found: $FILENAME"
             exit 1
           fi
-          # Check if file exists
-          if [ ! -f "$RESULT" ]; then
-            echo "Package file not found: $RESULT"
-            exit 1
-          fi
-          # Set outputs
-          echo "PACKAGE_PATH=$RESULT" >> $GITHUB_ENV
-          echo "package_path=$RESULT" >> $GITHUB_OUTPUT
+
+      - name: Debug outputs
+        run: |
+          echo "Version: ${{ steps.version.outputs.version }}"
+          echo "Package path: ${{ steps.create_package.outputs.package_path }}"
+          ls -la
 
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
+        # Run this step in all cases where we have a package
+        if: steps.create_package.outputs.package_path != ''
         with:
           files: ${{ steps.create_package.outputs.package_path }}
           name: Rider-Waite-Smith Tarot Deck v${{ steps.version.outputs.version }}
