--- a/.github/workflows/package-release.yml
+++ b/.github/workflows/package-release.yml
@@ -1,5 +1,8 @@
 name: Package and Release Tarot Deck
 
+permissions:
+  contents: write
+
 on:
   workflow_dispatch:
   push:
@@ -33,11 +36,10 @@ jobs:
 
       - name: Create Release
         if: github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           files: ${{ steps.package.outputs.zip_file }}
           name: Rider-Waite-Smith Tarot Deck v${{ steps.package.outputs.version }}
-          tag_name: ${{ startsWith(github.ref, 'refs/tags/') && github.ref_name || format('v{0}', steps.package.outputs.version) }}
           draft: false
           prerelease: false
           body: |
