chore(rws): update alt text

--- a/rider-waite-smith/names/en.toml
+++ b/rider-waite-smith/names/en.toml
@@ -90,56 +90,56 @@ queen = "Queen of Pentacles"
 king = "King of Pentacles"
 
 [alt_text.major_arcana]
-00 = "A young person in colorful clothes steps off a cliff, carrying a white rose. A small dog jumps at their heels."
-01 = "A figure in robes stands before a table with symbols of the four suits. One hand holding a wand points to the sky, the other to the ground."
-02 = "A robed woman sits between two pillars, one black and one white, with a crescent moon at her feet and a scroll in her hand."
-03 = "A crowned woman in flowing robes sits in a lush garden. She holds a scepter and has a heart-shaped shield with the Venus symbol."
-04 = "A crowned figure sits on a throne adorned with ram heads. He holds an ankh scepter and wears armor under his robes."
-05 = "A religious figure sits between two pillars, wearing triple crown. He makes a sign of blessing with his right hand."
-06 = "A naked man and woman stand beneath an angel. Behind them is a tree with flames and a tree with a serpent."
-07 = "A crowned figure in armor sits in a chariot drawn by two sphinxes or lions, one black and one white."
-08 = "A woman in a white robe gently closes the jaws of a lion, appearing to tame it with gentle strength rather than force."
-09 = "An old man in a robe holds a lantern and staff, standing on a mountain peak."
-10 = "A wheel floats in the sky with strange creatures at the cardinal points and a sphinx on top. The wheel contains various symbols."
-11 = "A figure in red robes sits between two pillars, holding scales in one hand and a sword in the other."
+00 = "A young traveler in colorful garments gazes upward, poised on a precipice. A tiny dog leaps beside them as sunlight illuminates the distant peaks."
+01 = "A robed figure stands before a table displaying a cup, sword, pentacle, and wand. One hand points to the sky, the other to the earth, with a garden of flowers at their feet."
+02 = "A serene figure is seated before a curtain decorated with pomegranates, flanked by dark and light pillars, holding a partially hidden scroll with a crescent moon at her feet."
+03 = "A crowned woman in flowing robes reclines on plush cushions, surrounded by wheat and lush greenery. A heart-shaped shield with a female symbol rests nearby."
+04 = "A bearded man in armor sits on a stone throne adorned with ram heads. He holds an orb and Ankh scepter, with a barren mountain landscape behind."
+05 = "A robed figure with a triple crown sits between two pillars, raising a hand in blessing. Two followers kneel before him as keys lie crossed at his feet."
+06 = "An unclothed man and woman stand beneath an angel with outstretched wings. Behind them is a tree with flames and a tree with a serpent."
+07 = "A figure in armor stands inside a chariot drawn by a black and a white sphinx, holding a wand. A city and star-studded canopy appear behind."
+08 = "A serene figure with garlanded hair leans over a large lion, her hands resting on its mouth, under a golden sky."
+09 = "An elderly cloaked figure stands atop a snowy peak, holding a lantern aloft in one hand and a staff in the other."
+10 = "A large, ornate wheel bearing esoteric symbols is flanked by four winged creatures reading books. Figures of a sphinx, snake, and jackal appear alongside the wheel."
+11 = "On a stone throne, a seated figure gazes forward, balancing scales in one hand and a raising a sword in the other."
 12 = "A man hangs upside down from a T-shaped tree, with his leg bent to form a cross. His face is peaceful."
 13 = "A skeleton in black armor rides a white horse. Before him, people of all classes fall, while a bishop stands in supplication."
 14 = "An angel with one foot in water, one on land, pours liquid between two cups. A path leads to mountains with a golden crown."
-15 = "A horned, winged figure sits on a block with two naked human figures chained to it. The devil has an inverted pentagram on his forehead."
+15 = "A horned, winged figure towers above a pedestal, one hand raised, the other holding a torch pointed downward. At the figure’s feet, two unclothed humans stand chained by the neck, their expressions subdued. The background is dark, and the chains are loose."
 16 = "A stone tower on a rocky outcrop is struck by lightning, with people falling from it against a black background."
-17 = "A naked woman kneels by a pool, pouring water from two jugs. Above her is a large eight-pointed star with smaller stars around it."
+17 = "A woman kneels beside a pond underneath a star-filled sky, pouring water onto land and into the pool, surrounded by greenery."
 18 = "A full moon shines over a path between two towers. A wolf and dog howl, and a crayfish emerges from the water."
-19 = "A radiant sun shines above a child riding a white horse. Sunflowers rise behind a wall."
-20 = "An angel with wings blows a trumpet in the heavens, and people rise from coffins below."
-21 = "A dancing figure in a flowing purple veil is surrounded by a green wreath. At the corners are the four fixed zodiacal signs."
+19 = "A radiant sun shines above a child riding a white horse,with vibrant sunflowers lining a stone wall behind."
+20 = "An angel with wings and a trumpet hovers in the sky, as figures rise from coffins below, arms outstretched toward the sound."
+21 = "A figure draped in a flowing cloth dances within an oval wreath, holding a wand in each hand. Four figures—a lion, bull, eagle, and human—occupy each corner against a pale background."
 
 [alt_text.minor_arcana.wands]
 ace = "A hand emerges from a cloud holding a sprouting wooden staff with leaves and stems growing from its top."
-two = "A figure in a robe stands on a hill holding two staves, looking out over the sea and distant landscapes."
-three = "A figure stands on a hill overlooking ships in a harbor, holding three wands and looking toward the horizon."
+two = "A figure in a red cloak stands on a castle wall, holding a globe in one hand and a wand in the other, with a second wand fixed to the wall beside them."
+three = "A figure stands on a hill overlooking ships in a harbor, flanked by three staffs anchored in the earth."
 four = "Four wands form a canopy decorated with flowers. Two figures hold bouquets in celebration."
-five = "Five young people use staves like quarterstaffs in what appears to be a mock battle or competition."
+five = "Five youths brandish wands, their movements energetic and chaotic, set against a clear sky."
 six = "A rider on horseback wearing a wreath of victory. People with staves celebrate and pay homage."
 seven = "A figure on a hill defends their position with a staff against six opposing staves from below."
-eight = "Eight staves fly through the air in parallel formation over a landscape with a river and hills."
+eight = "Eight staves fly through the air in parallel formation over a serene landscape with a river and hills."
 nine = "A figure with bandaged head leans on a staff, looking apprehensively at eight other staves forming a fence."
-ten = "A figure struggles to carry a heavy bundle of ten staves, appearing burdened and exhausted."
-page = "A young person in a feathered cap holds a staff, looking at it with curiosity against an arid landscape."
+ten = "A figure struggles to carry a heavy bundle of ten staves, appearing burdened and exhausted walking toward a town in the distance.."
+page = "A youth in patterned clothing stands in a desert, holding a tall wand upright and gazing at its leaves."
 knight = "A knight in armor rides a rearing horse across a desert landscape, holding a staff with determination."
 queen = "A crowned woman sits on a throne holding a sunflower and a staff. A black cat sits at her feet."
-king = "A crowned figure sits on a throne adorned with lions and salamanders, holding a flowering staff."
+king = "A crowned figure sits on a throne adorned with lions and salamanders, holding a flowering staff. A salamander rests at his feet."
 
 [alt_text.minor_arcana.cups]
 ace = "A hand emerges from a cloud holding a cup or chalice, from which five streams flow like a fountain."
 two = "Two people face each other, each raising a cup in a toast. Above them float two caducei intertwined."
 three = "Three young women in flowing gowns dance together in celebration, each raising a cup."
-four = "A seated figure in blue contemplates three cups on the ground before them, while a hand offers a fourth cup."
+four = "A seated figure contemplates three cups on the ground before them, while a hand offers a fourth cup."
 five = "A figure in black mourns over three spilled cups, while two cups remain standing behind them unnoticed."
-six = "A fair-haired child gives a cup with flowers to another child. More cups with flowers stand in the foreground."
-seven = "A figure in a cloak contemplates seven cups floating in a cloud, each containing a different image or symbol."
+six = "A child gives a cup with flowers to another child. More cups with flowers stand in the foreground."
+seven = "A figure in a cloak contemplates seven cups floating in a cloud, each containing a different object or symbol."
 eight = "A cloaked figure walks away from eight stacked cups toward mountains under the moon."
 nine = "A well-dressed figure sits contentedly before nine cups arranged in an arc, appearing satisfied with their material success."
-ten = "A family celebrates under a rainbow with ten cups arranged in an arc overhead, symbolizing fulfillment and happiness."
+ten = "A family celebrates under a rainbow with ten cups arranged in an arc overhead overlooking a peaceful landscape"
 page = "A youth in a feathered hat stands by water, looking with wonder at a fish emerging from a cup they hold."
 knight = "A knight in decorative armor rides slowly on a white horse, extending a cup as if in offering."
 queen = "A crowned woman sits on a throne by water, holding an ornate closed cup and contemplating it deeply."
@@ -147,31 +147,31 @@ king = "A king in robes sits on a throne by the sea, holding an elaborate cup an
 
 [alt_text.minor_arcana.swords]
 ace = "A hand emerges from a cloud holding a sword, the tip of which is crowned. Palm fronds adorn the sides."
-two = "A seated blindfolded woman holds two crossed swords, with her back to a body of water with rocks."
+two = "A seated blindfolded woman holds two crossed swords, with her back to a body of water with a jagged rocky shore."
 three = "A heart pierced by three swords against a stormy, rainy background."
 four = "A stone carving of a knight rests on a tomb. Four swords hang on the wall above."
-five = "A figure walks away with three swords while two others lie defeated on the ground."
-six = "A boat carries a sad figure and six swords across calm waters toward distant shores."
-seven = "A figure sneaks away carrying five swords, looking back at two swords left standing in the ground."
-eight = "A woman bound and blindfolded, surrounded by eight swords that form a cage around her."
-nine = "A woman sits on a bed, head in hands in despair. Nine swords hang on the wall behind her."
-ten = "A figure lies face down with ten swords stuck in their back against a dark sky."
-page = "A youth stands against a turbulent sky, holding a sword and appearing to watch for something."
-knight = "A knight in armor charges forward on a swift horse, sword raised for battle."
+five = "A figure in the foreground collects swords with a smirk, while two others walk away near the sea, their posture defeated."
+six = "A cloaked figure and a child sit in a boat as a ferryman rows them across calm water. Six upright swords are planted in the boat’s prow."
+seven = "A figure carrying five swords sneaks away from an encampment with tents and banners, looking back at two swords left standing in the ground."
+eight = "A figure with a blindfold and tied hands stands a muddy field, encircled by swords planted in the earth around them."
+nine = "A figure sits on a bed, head in hands in despair. Nine swords hang horizontally on the wall behind them."
+ten = "A figure lies face down on the ground, ten swords piercing their back. The sky is black, but the horizon glows with light."
+page = "A youth stands against a backdrop of rolling hills and turbulent sky, wielding a raised sword, stance alert and ready."
+knight = "An armored knight charges forward on a white horse, sword raised high. Trees bend in the strong wind beneath dramatic clouds."
 queen = "A profile of a stern queen sitting on a throne, holding a sword upright in one hand and extending the other hand forward."
-king = "A king sits on a throne with a sword held upright, projecting authority and judgment."
+king = "A regal figure sits on a decorated throne, projecting authority and judgment with a sword held upright in one hand. Butterflies and crescent moons embellish the throne and trees sway in the background.."
 
 [alt_text.minor_arcana.pentacles]
 ace = "A hand emerging from a cloud holds a large golden pentacle or coin in a lush garden with lilies and a path."
-two = "A figure wearing a blindfold juggles two pentacles, each encircled by a lemniscate (infinity symbol)."
+two = "A figure standing near a shoreline juggles two pentacles, each encircled by a lemniscate."
 three = "A craftsman examines his work on a cathedral stained glass window, observed by two monks or patrons."
 four = "A crowned figure sits hunched, arms wrapped protectively around a pentacle, with three more at their feet."
 five = "Two poor figures walk in snow past a stained glass window, appearing cold and destitute."
 six = "A merchant weighs coins on a scale, giving to one poor person while another waits nearby."
 seven = "A person rests, leaning on a staff, looking at seven pentacles growing on a vine or bush."
 eight = "A craftsman works carefully on a pentacle at their bench, with seven completed pentacles displayed above."
-nine = "A well-dressed woman stands in a garden with nine pentacles, a hooded falcon on her hand."
-ten = "An elderly man and a woman stand outside a walled estate, with a younger couple and child within the archway."
+nine = "A well-dressed woman stands in a lush garden with nine pentacles, a hooded falcon on her hand."
+ten = "An elderly man in a flowing ornate cloak is seated outside a walled estate, with a younger couple and child within the archway."
 page = "A youth in a red cap stands in a meadow, carefully studying a pentacle they hold."
 knight = "A knight in armor sits atop a stationary black horse in a plowed field, holding a pentacle carefully."
 queen = "A queen sits in a lush garden with rabbits nearby, holding a pentacle and surrounded by flowers and growth."
