fix(rws): incorrect alt text for Four of Pentacles

--- a/rider-waite-smith/names/en.toml
+++ b/rider-waite-smith/names/en.toml
@@ -165,7 +165,7 @@ king = "A regal figure sits on a decorated throne, projecting authority and judg
 ace = "A hand emerging from a cloud holds a large golden pentacle or coin in a lush garden with lilies and a path."
 two = "A figure standing near a shoreline juggles two pentacles, each encircled by a lemniscate."
 three = "A craftsman examines his work on a cathedral stained glass window, observed by two monks or patrons."
-four = "A crowned figure sits hunched, arms wrapped protectively around a pentacle, with three more at their feet."
+four = "A crowned figure sits hunched, arms wrapped protectively around a pentacle, with another pentacle resting atop their crown and two more at their feet."
 five = "Two poor figures walk in snow past a stained glass window, appearing cold and destitute."
 six = "A merchant weighs coins on a scale, giving to one poor person while another waits nearby."
 seven = "A person rests, leaning on a staff, looking at seven pentacles growing on a vine or bush."
